--- a/style.css
+++ b/style.css
@@ -873,6 +873,12 @@ footer.footer p.small a.focus {
 	margin-bottom: 20px;
 }
 
+.ad {
+	width: 300px;
+	height: 250px;
+	margin: 0 auto;
+}
+
 .container {
 	margin: 0 auto;
 
