--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
 	font-family: 'Jua', sans-serif;
 	background-color: #ffffff;
 	width: 100%;
+	margin: 0;
+    padding: 0;
 }
 
 .file-upload {
