--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+html {
+	overflow-x: hidden;
+	width: 100%;
+}
 body {
 	font-family: 'Jua', sans-serif;
 	background-color: #ffffff;
-	width: 100%;
-	margin: 0;
-    padding: 0;
+	overflow-x: hidden;
+	box-sizing: border-box;
 }
 
 .file-upload {
@@ -157,6 +160,12 @@ body {
 	margin-bottom: 50px;
 }
 
+.comment {
+	padding: 100px 0px 0px 0px;
+	margin: 0 auto;
+	max-width: 750px;
+}
+
 /* On screens that are 600px or less, set the background color to olive */
 @media screen and (max-width: 900px) {
 	html {
@@ -248,11 +257,6 @@ body {
 	margin: 0 auto;
 }
 
-.comment {
-	padding: 100px 0px 0px 0px;
-	margin: 0 auto;
-	max-width: 850px;
-}
 
 @import url(https://fonts.googleapis.com/css?family=Orbitron:400,900,700);
 
