--- a/database/style.css
+++ b/database/style.css
@@ -2334,6 +2334,10 @@ body.app_version .bootstrap-select .btn-light:hover{
 	left: 0px;
 }
 
+.ad2 {
+	width: 320;
+}
+
 #preloader {
     width: 100%;
     height: 100%;
