--- a/database/style.css
+++ b/database/style.css
@@ -2334,10 +2334,6 @@ body.app_version .bootstrap-select .btn-light:hover{
 	left: 0px;
 }
 
-.ad2 {
-	width: 320;
-}
-
 #preloader {
     width: 100%;
     height: 100%;
@@ -2605,6 +2601,16 @@ body.app_version .dev-list .widget-title small{
     animation: sonarEffect 1.3s ease-out 75ms;
 }
 
+.ad2 {
+	width: 320px;
+	height: 50px;
+	margin: 0 auto;
+}
 
+.advertisement1 {
+	width: 300px;
+	height: 250px;
+	margin: 0 auto;
+}
 
 
